# sentinel

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  ChangeLog.txt  README.md  appveyor.yml  index.html
0.1.0/: search-index.js
0.1.0/lru_time_cache/: struct.LruCache.html  struct.OccupiedEntry.html
0.1.0/rand/: struct.AsciiGenerator.html  struct.Generator.html
0.1.0/sentinel/: index.html  sidebar-items.js  type.SerialisedClaim.html
0.1.0/time/: enum.ParseError.html  fn.at.html  fn.at_utc.html  fn.empty_tm.html  fn.get_time.html  fn.now.html  fn.now_utc.html  fn.precise_time_ns.html  fn.precise_time_s.html  fn.strftime.html  fn.tzset.html  struct.PreciseTime.html  struct.SteadyTime.html  struct.Timespec.html  struct.Tm.html  struct.TmFmt.html
0.1.1/: index.html  search-index.js
0.1.1/lru_time_cache/: enum.Entry.html  index.html  struct.VacantEntry.html
0.1.1/rand/: struct.AsciiGenerator.html  struct.Generator.html
0.1.2/: search-index.js
0.1.2/accumulator/: index.html  struct.Accumulator.html  struct.Entry.html
0.1.2/cbor/: enum.CborError.html  struct.DecodedItems.html  struct.DirectDecoder.html  struct.Items.html  trait.ToCbor.html
0.1.2/libsodium_sys/: constant.crypto_aead_chacha20poly1305_KEYBYTES.html  constant.crypto_aead_chacha20poly1305_NPUBBYTES.html  constant.crypto_aead_chacha20poly1305_NSECBYTES.html  constant.crypto_auth_BYTES.html  constant.crypto_hash_BYTES.html  (+136 more)
master/: search-index.js
src/: account_sentinel.rs  key_sentinel.rs  key_store.rs  lib.rs  pure_sentinel.rs  refresh_sentinel.rs  sentinel.rs  statistics.rs  wrappers.rs
(+384 files in other folders)
