[package]

name = "sentinel"
version = "0.1.0"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "p2p network group consensus and PKI like ID confirmation"
documentation = "http://maidsafe.github.io/sentinel/latest/"
repository = "https://github.com/maidsafe/sentinel"
readme = "README.md"
license = "GPL-3.0"
homepage = "http://maidsafe.net"


[dependencies]
rustc-serialize = "*"
cbor = "*"
sodiumoxide = "0.0.5"
rand = "*"
accumulator = "0.0.2"
lru_time_cache = "0.1.8"
