[package]
name = "sentinel"
version = "0.1.2"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Peer-to-peer network group consensus and PKI-like ID confirmation"
documentation = "http://maidsafe.net/sentinel/latest"
repository = "https://github.com/maidsafe/sentinel"
readme = "README.md"
license = "GPL-3.0"
homepage = "http://maidsafe.net"

[dependencies]
rustc-serialize = "*"
cbor = "*"
sodiumoxide = "*"
rand = "*"
accumulator = "0.1.*"
lru_time_cache = "0.2.*"
